[gd_scene load_steps=5 format=2]

[ext_resource path="res://Hacker.gd" type="Script" id=1]
[ext_resource path="res://portraits/1.png" type="Texture" id=2]
[ext_resource path="res://fonts/F25_Bank_Printer.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 3 )

[node name="Hacker" type="VBoxContainer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 69.0
margin_bottom = 147.0

[node name="PortraitSprite" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 147.0
texture = ExtResource( 2 )

[node name="HackerNameLabel" type="Label" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 69.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Name"
autowrap = true

[node name="HackerAbilityLabel" type="Label" parent="."]
margin_top = 151.0
margin_right = 69.0
margin_bottom = 173.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
autowrap = true
